# hex

./: Cargo.toml
hex_ai/: Cargo.toml
hex_ai/src/: brain.rs  claude_brain.rs  cohere_brain.rs  common.rs  util.rs
hex_commands/: Cargo.toml
hex_commands/src/: command_pipeline.rs  lib.rs  module_channel.txt  module_members.txt  module_moderation.txt  owner.rs  pipeline_prompt.txt  prelude.rs  suggest.rs
hex_common/: Cargo.toml
hex_common/src/: cache.rs  color.rs  config.rs  lib.rs  probability.rs
hex_data/: Cargo.toml
hex_data/src/: emojis.rs
hex_database/: Cargo.toml
hex_database/src/: common.rs  lib.rs  member_commands.rs  member_model.rs
hex_discord/: Cargo.toml
hex_discord/src/: component.rs  embed.rs
hex_discord/src/util/: emoji.rs  extensions.rs
hex_framework/: Cargo.toml
hex_framework/src/: command.rs  command_builder.rs  command_context.rs  context_helper.rs  embed_pagination.rs  framework.rs  hex_client.rs  lib.rs  option_handler.rs  response.rs  util.rs  watcher.rs
hex_macros/: Cargo.toml
hex_macros/src/: command.rs  util.rs
main/: Cargo.toml
main/src/: command_handler.rs  event_handler.rs  main.rs
