[workspace]
members = [
    "main",

    "hex_common",
    "hex_data",
    "hex_macros",
    "hex_discord",
    "hex_commands",
    "hex_database",
    "hex_ai",
]
resolver = "2"

[profile.dev] 
opt-level = 1

[workspace.dependencies]
serde = "1.0.188"
serde_json = "1.0.107"
anyhow = "1.0.75"
bson = { version = "2.7.0", features = ["chrono-0_4"] }
rand = "0.8.5"
async-trait = "0.1.73"
chrono = "0.4.30"
tokio = "1.32"
tokio-stream = "0.1.14"
once_cell = "1.18"
reqwest = { version = "0.12.3", features = ["json"] }