[package]
name = "hex_ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex_common = { path = "../hex_common" }
hex_data = { path = "../hex_data" }
hex_database = { path = "../hex_database" }
hex_discord = { path = "../hex_discord" }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }

regex = "1.10.3"