[package]
name = "hex_commands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex_framework = { path = "../hex_framework" }
hex_discord = { path = "../hex_discord" }
hex_macros = { path = "../hex_macros" }
hex_common = { path = "../hex_common" }
hex_data = { path = "../hex_data" }
hex_database = { path = "../hex_database" }
hex_ai = { path = "../hex_ai" }

async-trait = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

once_cell = "1.18"
async-recursion = "1.0.5"
unidecode = "0.3"
parking_lot = "0.12.1"
regex = "1.10.2"
neso = "0.5.0"