[package]
name = "hex_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
image = "0.25.1"
lru = "0.12"
base64 = "0.22"