[package]
name = "hex_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex_discord = { path = "../hex_discord" }
hex_common = { path = "../hex_common" }
hex_data = { path = "../hex_data" }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
bson = { workspace = true }
mongodb = "2.7"