[package]
name = "hex_framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex_common = { path = "../hex_common" }
hex_discord = { path = "../hex_discord" }
hex_database = { path = "../hex_database" }

anyhow = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

dashmap = { default-features = false, version = "5.5.3" }