[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex_discord = { path = "../hex_discord" }
hex_framework = { path = "../hex_framework" }
hex_commands = { path = "../hex_commands" }
hex_common = { path = "../hex_common" }
hex_database = { path = "../hex_database" }
hex_data = { path = "../hex_data" }
hex_ai = { path = "../hex_ai" }

dotenv = "0.15.0"
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.14"

anyhow = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }